--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>마카샤 시뮬레이터</title>
+    <title>마카샤 키우기</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         * {
@@ -444,4 +444,5 @@
         document.addEventListener('dragstart', e => e.preventDefault());
     </script>
 </body>
+
 </html>
