--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>마카샤 키우기</title>
+    <title>시온 키우기</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         * {
@@ -251,7 +251,7 @@
         ];
 
         const audioFiles = ['resources/이히힛1.mp3', 'resources/이히힛2.mp3', 'resources/이히힛3.mp3', 'resources/이히힛4.mp3'];
-        const fallImages = ['resources/scared.gif', 'resources/smile.gif', 'resources/sex.gif'];
+        const fallImages = ['resources/scared.gif', 'resources/smile.gif', 'resources/happy.gif'];
 
         function initEstates() {
             const list = document.getElementById('estate-list');
