--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <button id="close-modal" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 text-2xl font-bold">&times;</button>
             <h2 class="text-2xl font-bold mb-4 text-gray-800 border-b-2 border-[#8FC1B5] pb-2">도움말</h2>
             <p class="text-gray-600 leading-relaxed">
-                춤추는 나를 누르면 포인트가 올라간다구!<br>근력을 강화하면 자동으로 랭크가 올라서 클릭 파워가 증폭돼!<br>랭크 4에서 5가 되려면 더 큰 노력이 필요할걸?<br>마지막 목표는 세계수 교단을 차지하는 거야!
+                나를 누르면 포인트가 쌓인다!<br>근력을 강화하면 자동으로 랭크가 올라서 클릭 파워가 증폭된다..!<br>랭크 4에서 5가 되려면 큰 노오력이 필요하다!<br>마지막 목표는 매니저가 되는 것이다!
             </p>
         </div>
     </div>
@@ -163,7 +163,7 @@
 
     <div id="ui-layer">
         <div class="fixed top-8 left-12 p-6 rounded-2xl shadow-xl score-container min-w-[250px] text-center pointer-events-auto">
-            <div class="text-xl font-bold text-gray-500 mb-1">이-히힛! 포인트</div>
+            <div class="text-xl font-bold text-gray-500 mb-1">어둠의 알바생 포인트</div>
             <div id="score" class="text-5xl font-black score-text">0</div>
             <div class="mt-2 flex justify-center gap-4 text-sm font-bold text-gray-400">
                 <span>클릭: +<span id="display-click">1</span></span>
@@ -172,7 +172,7 @@
             <div class="mt-1 text-xs font-bold text-orange-400">현재 랭크: <span id="display-rank">0</span> / 5</div>
         </div>
 
-        <h1 class="text-3xl font-bold pt-10 text-gray-800">마카샤 시뮬레이터</h1>
+        <h1 class="text-3xl font-bold pt-10 text-gray-800">시온 알바 시뮬레이터</h1>
 
         <div class="flex flex-col items-center mt-6">
             <div class="mb-6">
@@ -181,12 +181,12 @@
 
             <div class="flex flex-col gap-3 w-80 pointer-events-auto">
                 <button id="upgrade1" class="upgrade-btn p-3 rounded-xl font-bold shadow-sm">
-                    <div>근력 강화! (Lv.<span id="lv1">0</span>)</div>
+                    <div>손님 응대 메뉴얼 정독! (Lv.<span id="lv1">0</span>)</div>
                     <div class="text-xs text-blue-500" id="rank-info">다음 랭크까지: 25 Lv</div>
                     <div class="text-sm">비용: <span id="cost1">100</span>P</div>
                 </button>
                 <button id="upgrade2" class="upgrade-btn p-3 rounded-xl font-bold shadow-sm">
-                    <div>새로운 결말! (Lv.<span id="lv2">0</span>)</div>
+                    <div>필살 더블 포스기! (Lv.<span id="lv2">0</span>)</div>
                     <div class="text-xs text-green-500" id="auto-info">현재 강화당 +10P</div>
                     <div class="text-sm">비용: <span id="cost2">100</span>P</div>
                 </button>
@@ -250,7 +250,7 @@
             }
         ];
 
-        const audioFiles = ['resources/이히힛1.mp3', 'resources/이히힛2.mp3', 'resources/이히힛3.mp3', 'resources/이히힛4.mp3'];
+        const audioFiles = ['resources/크큭1.wav', 'resources/크큭2.wav', 'resources/하하1.wav', 'resources/하하2.wav'];
         const fallImages = ['resources/scared.gif', 'resources/smile.gif', 'resources/happy.gif'];
 
         function initEstates() {
@@ -400,7 +400,7 @@
                     showRankToast(Math.pow(2, up3Level));
                 }
                 
-                new Audio('resources/아 여기서 더 강해지다니.mp3').play().catch(()=>{});
+                new Audio('resources/아직도 배울 것이 이렇게나 많다니.wav').play().catch(()=>{});
                 updateUI();
             }
         });
@@ -410,7 +410,7 @@
                 score -= up2Cost;
                 up2Level++;
                 up2Cost *= 1.1;
-                new Audio('resources/새로운 이야기를 쓸때가 왔어.mp3').play().catch(()=>{});
+                new Audio('resources/필살 더블 포스기 받아라.wav').play().catch(()=>{});
                 updateUI();
             }
         });
